fix dark mode background

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,11 +71,23 @@ html {
 }
 
 body {
+  height: 100vh;
   font-family: "Oxanium", sans-serif;
-  color: #333;
+  color: black;
   background: linear-gradient(to bottom, #65c8e6, #402d48);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: linear-gradient(to bottom, #65c8e6, #402d48);
+    color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+  }
 }
